--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <ol>
         <li>
             <a href="./lucia.html"></a>
+            <a href="./natalia.html"></a>
         </li>
     </ol>
 
