--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         <li>
             <a href="./lucia.html"></a>
             <a href="./natalia.html"></a>
+            <a href="./sebas.html"></a>
+            <a href="./alexmary.html"></a>
         </li>
     </ol>
 
