--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <h1>Miembros del equipo</h1>
     <ol>
         <li>
-            <a href="./lucia.html"></a>
-            <a href="./natalia.html"></a>
-            <a href="./sebas.html"></a>
-            <a href="./alexmary.html"></a>
+            <a href="./lucia.html">Lucia</a>
         </li>
+        <li><a href="./natalia.html">Natalia</a></li>
+        <li><a href="./sebas.html">Sebas</a></li>
+        <li><a href="./alexmary.html">Alexmary</a></li>
     </ol>
 
 
